--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     
         </footer>
     </section>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
