--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav id="barraNav">
             <div>
-                <img src="imagenes/logo.png" alt="">
+                <img style="width: 50px; height:50px" src="imagenes/logo.webp" alt="">
                 <ul class="menuSR">
                     <li><a href="#Nosotros">NOSOTROS</a>
                     <hr class="lineaMenu"></li>
@@ -28,7 +28,7 @@
             </div>
         </nav>
         <nav class="cajaMenuRep">
-            <img src="imagenes/logo.png" alt="">
+            <img src="imagenes/logo.webp" alt="">
             <input type="checkbox" id="checkMenRep">
             <label for="checkMenRep" class="checkbtnRep">
                 <i id="abrir" class="material-symbols-outlined">
@@ -45,7 +45,7 @@
         <div class="seccionBan">
             <div class="spaceBan">
                 <div class="text">
-                    <img class="titulo" src="imagenes/titulo.png" alt="">
+                    <img class="titulo" src="imagenes/titulo.webp" alt="">
                     <p>En el fascinante mundo de American Latin Stories, te sumergirás en una experiencia única donde cada elección cuenta. Este innovador juego de toma de decisiones te transporta a situaciones realistas de la vida cotidiana, donde cada paso que tomas moldea tu historia.</p>
                     <div class="botonesBann">
                         <button class="botonesBan rojo"><p>VER TRAILER</p></button>
@@ -55,19 +55,19 @@
                 <div class="barraHist">
                     <div class="cuadrosImg">
                         <div class="imgsFond uno">
-                            <img src="imagenes/cap1.png" alt="">
+                            <img src="imagenes/cap1.webp" alt="">
                         </div>
                         <div class="imgsFond dos">
-                            <img src="imagenes/cap2.png" alt="">
+                            <img src="imagenes/cap2.webp" alt="">
                         </div>
                         <div class="imgsFond tres">
-                            <img src="imagenes/cap3.png" alt="">
+                            <img src="imagenes/cap3.webp" alt="">
                         </div>
                         <div class="imgsFond cuatro">
-                            <img src="imagenes/cap4.png" alt="">
+                            <img src="imagenes/cap4.webp" alt="">
                         </div>
                         <div class="imgsFond cinco">
-                            <img src="imagenes/cap5.png" alt="">
+                            <img src="imagenes/cap5.webp" alt="">
                         </div>
                     </div>
                     
@@ -98,7 +98,7 @@
 
                 </div>
                 <div class="imgPersonCir">
-                    <img src="imagenes/circulo 1.png" alt="">
+                    <img src="imagenes/circulo 1.webp" alt="">
                 </div>
             </div>
         </div>
@@ -126,19 +126,19 @@
                 </div><br><br>
                 <div class="cuadrosImg2">
                     <div id="huno" class="imgsFond2 huno">
-                        <img src="imagenes/cap1.png" alt="">
+                        <img src="imagenes/cap1.webp" alt="">
                     </div>
                     <div id="hdos" class="imgsFond2 hdos">
-                        <img src="imagenes/cap2.png" alt="">
+                        <img src="imagenes/cap2.webp" alt="">
                     </div>
                     <div id="htres" class="imgsFond2 htres">
-                        <img src="imagenes/cap3.png" alt="">
+                        <img src="imagenes/cap3.webp" alt="">
                     </div>
                     <div id="hcuatro" class="imgsFond2 hcuatro">
-                        <img src="imagenes/cap4.png" alt="">
+                        <img src="imagenes/cap4.webp" alt="">
                     </div>
                     <div id="hcinco" class="imgsFond2 hcinco">
-                        <img src="imagenes/cap5.png" alt="">
+                        <img src="imagenes/cap5.webp" alt="">
                     </div>
                 </div>
 
@@ -148,7 +148,7 @@
     <section id="contactar">
         <footer>
             <div class="franjasNegras">
-                <img src="imagenes/Group 103.png" alt="">
+                <img src="imagenes/Group 103.webp" alt="">
             </div>
             <div class="centrCo">
                 <div class="cajaC">
@@ -190,7 +190,7 @@
                         <p class="parrafoCopy">
                             AMERICAN LATIN STORIES ©® 2022 Copyright All Rights Reserved.
                         </p>
-                        <img src="imagenes/violence.png" alt="">
+                        <img src="imagenes/violence.webp" alt="">
                     </div>
                 </div>
             </div>
