--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <img class="titulo" src="imagenes/titulo.webp" alt="">
                     <p>En el fascinante mundo de American Latin Stories, te sumergirás en una experiencia única donde cada elección cuenta. Este innovador juego de toma de decisiones te transporta a situaciones realistas de la vida cotidiana, donde cada paso que tomas moldea tu historia.</p>
                     <div class="botonesBann">
-                        <button class="botonesBan rojo"><p>VER TRAILER</p></button>
-                        <button class="botonesBan vacio"><p>CONTACTAR</p></button>
+                        <button onclick="location.href = '#Nosotros'"  class="botonesBan rojo"><p>VER TRAILER</p></button>
+                        <button onclick="location.href = '#Nosotros'"  class="botonesBan vacio"><p>CONTACTAR</p></button>
                     </div>
                 </div>
                 <div class="barraHist">
@@ -94,7 +94,7 @@
                 <div class="textoNootros">
                     <h2>AMERICAN LATIN STORIES</h2>
                     <p>En el fascinante mundo de American Latin Stories, te sumergirás en una experiencia única donde cada elección cuenta. Este innovador juego de toma de decisiones te transporta a situaciones realistas de la vida cotidiana, donde cada paso que tomas moldea tu historia.</p>
-                    <button>CONTACTAR</button>
+                    <button onclick="location.href = '#Nosotros'" >CONTACTAR</button>
                     <video controls class="video" src=""></video>
 
                 </div>
