--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>En el fascinante mundo de American Latin Stories, te sumergirás en una experiencia única donde cada elección cuenta. Este innovador juego de toma de decisiones te transporta a situaciones realistas de la vida cotidiana, donde cada paso que tomas moldea tu historia.</p>
                     <div class="botonesBann">
                         <button onclick="location.href = '#Nosotros'"  class="botonesBan rojo"><p>VER TRAILER</p></button>
-                        <button onclick="location.href = '#Nosotros'"  class="botonesBan vacio"><p>CONTACTAR</p></button>
+                        <button onclick="location.href = '#contactar'"  class="botonesBan vacio"><p>CONTACTAR</p></button>
                     </div>
                 </div>
                 <div class="barraHist">
@@ -94,7 +94,7 @@
                 <div class="textoNootros">
                     <h2>AMERICAN LATIN STORIES</h2>
                     <p>En el fascinante mundo de American Latin Stories, te sumergirás en una experiencia única donde cada elección cuenta. Este innovador juego de toma de decisiones te transporta a situaciones realistas de la vida cotidiana, donde cada paso que tomas moldea tu historia.</p>
-                    <button onclick="location.href = '#Nosotros'" >CONTACTAR</button>
+                    <button onclick="location.href = '#contactar'" >CONTACTAR</button>
                     <video controls class="video" src=""></video>
 
                 </div>
@@ -171,13 +171,13 @@
                     <div class="cajaUls">
                         <ul>
                             <li><h3>SECCIONES</h3></li>
-                            <li><a href="">NOSOTROS</a>
+                            <li><a href="#Nosotros">NOSOTROS</a>
                                 <hr class="lineaMenu"></li>
-                             <li><a href="">TRAILER</a>
+                             <li><a href="#Nosotros">TRAILER</a>
                                 <hr class="lineaMenu"></li>
-                            <li><a href="">CAPITULOS</a>
+                            <li><a href="#capitulos">CAPITULOS</a>
                                 <hr class="lineaMenu"></li>
-                            <li><a href="">CONTACTAR</a>
+                            <li><a href="#contactar">CONTACTAR</a>
                                 <hr class="lineaMenu"></li>
                         </ul>
                         <ul>
